[package]
name = "todos-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
http = "1.0.0"
hyper = { version = "1.0.1", features = ["full"] }
redis = { version = "0.23.3", features = [
    "aio",
    "tokio-comp",
    "tokio-rustls-comp",
    "json",
    "tls-rustls-webpki-roots",
] }
redis-macros = "0.2.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ulid = { version = "1.1.0", features = ["serde"] }
